2001-10-14  Bart Schaefer  <schaefer@zsh.org>

	* 16030: Completion/Unix/Command/_mount: Fix minor typos in option
	descriptions.

2001-10-11  Bart Schaefer  <schaefer@zsh.org>

	* 16013: Src/exec.c: Properly save/restore state around the
	DEBUG trap, so that its return value does not alter the return
	value of current command (among other things).

2001-10-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 16002: Completion/Unix/Type/_path_files: use expanded paths
	(expand style with value prefix) only when we are at the last
	matcher spec

2001-10-10  Clint Adams  <clint@zsh.org>

	* 16006: Completion/Unix/Type/_mailboxes, Doc/Zsh/compsys.yo:
	use styles for mail directory, pine directory,
	and muttrc.

	* 16005: Completion/Unix/Command/_mount:
	check /etc/filesystems under Linux.

2001-10-10  Oliver Kiddle  <opk@zsh.org>

	* 16xxx: acconfig.h, zshconfig.ac, Etc/MACHINES,
	Test/C02cond.ztst: allow dynamic loading to work on MacOS X
	if the dlcompat library is installed.

2001-10-10  Clint Adams  <clint@zsh.org>

	* 16000: Completion/Debian/Command/.distfiles,
	Completion/Debian/Command/_debchange:
	completion for debchange (dch).

2001-10-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 15995: Completion/Unix/Type/_files, Doc/Zsh/compsys.yo:
	change file completion default to offer globbed files and
	directories on first try

2001-10-09  Peter Stephenson  <pws@csr.com>

	* 15994: Completion/compinstall: handle list-suffixes; make
	prompts at end of function more transparent.

2001-10-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 15991: Src/Zle/compcore.c: hide all but one match with the
	same string in the list even for unsorted groups

2001-10-08  Oliver Kiddle  <opk@zsh.org>

	* 15987: Src/Modules/tcp.c: remove includes duplicated from tcp.h
	which caused problems on IRIX 5.3.

	* 15983: Completion/Unix/Command/_wget, Completion/Unix/Type/_urls,
	Completion/Unix/Command/_user_admin, Completion/Unix/Command/_sysctl,